# coss

./: .gitignore  Makefile  README.md  pyproject.toml
src/opencode/: __init__.py  __main__.py  app.py  cli.py
src/opencode/config/: constants.py  loader.py  settings.py
src/opencode/core/: agent.py  context.py  conversation.py  cost.py  message.py  permissions.py  plan_mode.py
src/opencode/hooks/: manager.py
src/opencode/mcp/: bridge.py  client.py  config.py
src/opencode/memory/: store.py  system_prompt.py
src/opencode/providers/: anthropic.py  base.py  google.py  openai_compatible.py  registry.py
src/opencode/tools/: agent_tool.py  base.py  bash_tool.py  edit_tool.py  glob_tool.py  grep_tool.py  read_tool.py  registry.py  web_fetch_tool.py  web_search_tool.py  write_tool.py
src/opencode/ui/: renderer.py  repl.py  slash_commands.py
tests/config/: test_loader.py  test_settings.py
tests/core/: test_context.py  test_conversation.py  test_cost.py  test_message.py  test_permissions.py  test_plan_mode.py
tests/providers/: test_registry.py
tests/tools/: test_base.py  test_edit_tool.py  test_hooks.py  test_read_tool.py  test_registry.py  test_write_tool.py
