[project]
name = "opencode"
version = "0.1.0"
description = "Open-source agentic coding CLI with multi-provider LLM support"
requires-python = ">=3.11"
dependencies = [
    "rich>=14.0",
    "prompt-toolkit>=3.0.50",
    "httpx>=0.27",
    "pydantic>=2.7",
    "click>=8.1",
    "openai>=1.50",
    "pyyaml>=6.0",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
opencode = "opencode.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opencode"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
